# opengl-engine-uni-2014

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  main.cpp  readme  readme.md  rw.cppcheck  rw3.cbp  rw3.depend  rw3.layout  setup_env.bat  vcpkg.json
cmakeModules/: FindALUT.cmake  FindGLUT.cmake  fix_compile_cmds.cmake
data/objFiles/: arrow.mtl  arrows.json  keyframes.json  otherobj.json  redcubeobj.mtl  scene.json  specyfikacja.json  szczala.json  texturedcube.mtl
dep/tinyobjloader/: CMakeLists.txt  README.md  premake4.lua  test.cc  tiny_obj_loader.cpp  tiny_obj_loader.h
dep/tinyobjloader/examples/obj_sticher/: obj_sticher.cc  obj_writer.cc  obj_writer.h
include/: aabbcollisionmgr.h  animationframe.h  animator.h  boundedobject.h  boundinfo.h  camera.h  collidingobject.h  concreteanimator.h  constanimator.h  cube.h  displaymanager.h  displaymanagerglut.h  drawable.h  fpscamera.h  gameobject.h  inputlistener.h  inputmanager.h  inputmanagerglut.h  keyframe.h  linearanimator.h  loadedobject.h  movable.h  mover.h  objectdesc.h  objectmanager.h  objectmanagerglut.h  objloader.h  rwconfig.h  sceneloader.h  sceneobject.h  scenepos.h  soundsource.h  soundsourceglut.h  unique.h  worldobject.h
objFiles/: arrow_blue.mtl  arrow_green.mtl  arrows.json  keyframes.json  scene.json  szczala.json  texturedcube.mtl
port_overlays/freealut/: cmake_builds.patch  portfile.cmake  unix_headers.patch  vcpkg.json
src/: aabbcollisionmgr.cpp  animationframe.cpp  concreteanimator.cpp  cube.cpp  displaymanagerglut.cpp  fpscamera.cpp  inputmanagerglut.cpp  keyframe.cpp  linearanimator.cpp  loadedobject.cpp  main.cpp  mover.cpp  objectmanagerglut.cpp  objloader.cpp  rwconfig.cpp  sceneloader.cpp  sceneobject.cpp  scenepos.cpp  soundsourceglut.cpp  worldobject.cpp
